--- a/src/templates/itemMain.hbs
+++ b/src/templates/itemMain.hbs
@@ -1,16 +1,14 @@
-<template>
-  <div href="/item/1581214" class="w-[23%]">
-    <div class="relative">
-      <img class="mb-4" src="{{image}}" alt="Photo1">
-      <a class="absolute top-2 right-2 cursor-pointer">
-        <svg class="w-[30px] block m-auto transition-transform scale-100 group-hover:scale-150 group-hover:transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
-        </svg>
-      </a>
-    </div>
-    <div class="flex justify-between font-HelveticaNeueCyr text-black ">
-      <p class="max-w-[215px]">Вязанное платье с высоким воротником</p>
-      <p class="font-bold">2799<span>₽</span></p>
-    </div>
+<div class="relative group {{#if big}}sm:col-span-2 sm:row-span-2{{/if}} flex flex-col justify-between">
+  <a class="flex-grow" href="item/{{article}}">
+    <img class="object-cover {{#if big}}h-full{{/if}}" src="{{images.[1]}}&fit=constrain" alt="Photo1">
+  </a>
+  <div class="group-hover:animate-pulse invisible group-hover:visible absolute top-2 right-2 cursor-pointer">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+    </svg>
   </div>
-</template>
+  <div class="flex justify-between mt-2.5 h-10 font-HelveticaNeueCyr text-black leading-5">
+    <p class="">{{title}}</p>
+    <p class="font-bold">{{price}}<span>₽</span></p>
+  </div>
+</div>
