--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,154 +1,23 @@
-<!-- <section class="container mx-auto h-[65px] mx-auto my-0 box-border flex justify-between items-center mb-4 font-Arial text-[16px]">-->
-<!--    <div class="flex">-->
-<!--      <div class="flex justify-between w-[120px] relative mr-8">-->
-<!--        <p>Brands</p>-->
-<!--        <span>-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--            </svg>-->
-<!--        </span>-->
-<!--        <div class="brandsScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">-->
-<!--          <fieldset>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div><div class="flex justify-between w-[100px] mx-auto">-->
-<!--            <label for="brandSaleCheck">Sale</label>-->
-<!--            <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--          </div>-->
-<!--          </fieldset>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="flex justify-between w-[120px] relative mr-8">-->
-<!--        <p>Types</p>-->
-<!--        <span>-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--            </svg>-->
-<!--        </span>-->
-<!--        <div class="typesScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">-->
-<!--          <fieldset>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="saleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="saleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="newCheck">New</label>-->
-<!--              <input type="checkbox" name="type" id="newCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="clothesCheck">Clothes</label>-->
-<!--              <input type="checkbox" name="type" id="clothesCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="shoesCheck">Shoes</label>-->
-<!--              <input type="checkbox" name="type" id="shoesCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="presentsCheck">Presents</label>-->
-<!--              <input type="checkbox" name="type" id="presentsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="accessorsCheck">Accessors</label>-->
-<!--              <input type="checkbox" name="type" id="accessorsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="cosmeticsCheck">Cosmetics</label>-->
-<!--              <input type="checkbox" name="type" id="cosmeticsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandsCheck">Brands</label>-->
-<!--              <input type="checkbox" name="type" id="brandsCheck">-->
-<!--            </div>-->
-<!--          </fieldset>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="mr-5">-->
-<!--        <p>Stock</p>-->
-<!--        <div class="stockRangeContainer relative">-->
-<!--          <input id='stockLeft' type='range' min='0' value='0' max='100' class="rangeStock absolute"/>-->
-<!--          <input id='stockRight' type='range' min='0' value='100' max='100' class="rangeStock absolute"/>-->
-<!--        </div>-->
-<!--        <div class="flex justify-between">-->
-<!--          <p>0</p>-->
-<!--          <p>100</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div>-->
-<!--        <p>Price</p>-->
-<!--        <div class="stockPriceContainer relative">-->
-<!--          <input id='priceLeft' type='range' min='0' value='0' max='100' class="rangePrice absolute"/>-->
-<!--          <input id='priceRight' type='range' min='0' value='100' max='100' class="rangePrice absolute"/>-->
-<!--        </div>-->
-<!--        <div class="flex justify-between">-->
-<!--          <p>0</p>-->
-<!--          <p>100</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="flex items-center">-->
-<!--      <label class="group inline-block h-full cursor-pointer py-5 w-[51px] text-center h-[65px] box-border" for="search">-->
-<!--        <svg class="w-[30px] block m-auto transition-transform scale-100 button-g group-hover:scale-150 group-hover:transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">-->
-<!--          <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />-->
-<!--        </svg>-->
-<!--      </label>-->
-<!--      <input type="text" id="search" placeholder="Input item name">-->
-<!--    </div>-->
-<!--    <div>-->
-<!--      <div class="flex">-->
-<!--        <div class="flex justify-between cursor-pointer">-->
-<!--          <p>Sort by:&nbsp;</p>-->
-<!--        </div>-->
-<!--        <div class="flex flex-col justify-between text-[#7D7B7B]">-->
-<!--          <a class="flex justify-between cursor-pointer">-->
-<!--            <span>price increase&nbsp;</span>-->
-<!--            <span>-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--              </svg>-->
-<!--            </span>-->
-<!--          </a>-->
-<!--          <a class="cursor-pointer">descending price</a>-->
-<!--          <a class="cursor-pointer">popularity</a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </section>-->
-  <section id="items" class="container xl:grid-cols-4 mx-auto grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5">
-  </section>
+<aside class="container text-sm">
+  <div class="relative inline-block">
+    <button class="border rounded hover:border-gray-700 px-2 py-1">Category
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor" class="inline w-3 h-3">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+      </svg>
+    </button>
+    <div
+        class="brandsScroll  drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
+      <fieldset>
+        <div class="flex border-b py-1.5 last:border-0 justify-between mx-auto">
+          <input type="checkbox" class="checked:bg-amber-400" name=type id="brandSaleCheck">
+          <label class="flex-grow mx-1" for="brandSaleCheck">Socks, stockings and tights</label>
+          <span class="text-gray-400">5/5</span>
+        </div>
+      </fieldset>
+    </div>
+  </div>
+
+</aside>
+<section id="items"
+    class="container xl:grid-cols-4 mx-auto grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5"></section>
