--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,23 +1,35 @@
 <aside class="container text-sm">
+  <!--  <div class="relative inline-block">-->
+  <!--    <button class="border rounded hover:border-gray-700 px-2 py-1">Category-->
+  <!--      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"-->
+  <!--          stroke="currentColor" class="inline w-3 h-3">-->
+  <!--        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>-->
+  <!--      </svg>-->
+  <!--    </button>-->
+  <!--    <div-->
+  <!--        class="brandsScroll  drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">-->
+  <!--      <fieldset>-->
+  <!--        <div class="flex border-b py-1.5 last:border-0 justify-between mx-auto">-->
+  <!--          <input type="checkbox" class="checked:bg-amber-400" name=type id="brandSaleCheck">-->
+  <!--          <label class="flex-grow mx-1" for="brandSaleCheck">Socks, stockings and tights</label>-->
+  <!--          <span class="text-gray-400">5/5</span>-->
+  <!--        </div>-->
+  <!--      </fieldset>-->
+  <!--    </div>-->
+  <!--  </div>-->
   <div class="relative inline-block">
-    <button class="border rounded hover:border-gray-700 px-2 py-1">Category
+    <button class="border rounded hover:border-gray-700 px-2 py-1">Price
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
           stroke="currentColor" class="inline w-3 h-3">
         <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
       </svg>
     </button>
     <div
-        class="brandsScroll  drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
-      <fieldset>
-        <div class="flex border-b py-1.5 last:border-0 justify-between mx-auto">
-          <input type="checkbox" class="checked:bg-amber-400" name=type id="brandSaleCheck">
-          <label class="flex-grow mx-1" for="brandSaleCheck">Socks, stockings and tights</label>
-          <span class="text-gray-400">5/5</span>
-        </div>
-      </fieldset>
+        class="brandsScroll drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
+      <div id="slider"></div>
+      <div></div>
     </div>
   </div>
-
 </aside>
 <section id="items"
     class="container xl:grid-cols-4 mx-auto grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5"></section>
