--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,44 +1,97 @@
-<aside id="filters" class="container mx-auto text-sm flex">
-  <!--  <div class="relative inline-block">-->
-  <!--    <button class="border rounded hover:border-gray-700 px-2 py-1">Category-->
-  <!--      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"-->
-  <!--          stroke="currentColor" class="inline w-3 h-3">-->
-  <!--        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>-->
-  <!--      </svg>-->
-  <!--    </button>-->
-  <!--    <div-->
-  <!--        class="brandsScroll  drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">-->
-  <!--      <fieldset>-->
-  <!--        <div class="flex border-b py-1.5 last:border-0 justify-between mx-auto">-->
-  <!--          <input type="checkbox" class="checked:bg-amber-400" name=type id="brandSaleCheck">-->
-  <!--          <label class="flex-grow mx-1" for="brandSaleCheck">Socks, stockings and tights</label>-->
-  <!--          <span class="text-gray-400">5/5</span>-->
-  <!--        </div>-->
-  <!--      </fieldset>-->
-  <!--    </div>-->
-  <!--  </div>-->
-  <div class="relative inline-block">
-    <button class="border rounded hover:border-gray-700 px-2 py-1">Price
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-          stroke="currentColor" class="inline w-3 h-3">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+<aside id="filters" class="container mx-auto text-sm">
+    <div class="flex gap-1">
+      <div id="categoryFilter" class="relative inline-block">
+        <button class="border rounded hover:border-gray-700 px-2 py-1">Category
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
+          <fieldset>
+          </fieldset>
+        </div>
+      </div>
+      <div id="brandFilter" class="relative inline-block">
+        <button class="border rounded hover:border-gray-700 px-2 py-1">Brand
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
+        </div>
+      </div>
+      <div id="priceFilter" class="relative inline-block">
+        <button class="border rounded hover:border-gray-700 px-2 py-1">Price
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
+          <div id="slider"></div>
+          <div></div>
+        </div>
+      </div>
+      <div id="stockFilter" class="relative inline-block">
+        <button class="border rounded hover:border-gray-700 px-2 py-1">Stock
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
+          <div id="slider"></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="inline-block">
+        <select
+            class="border rounded hover:border-gray-700 focus:ring-gray-700 focus:border-gray-700 w-full pl-2 pr-7 py-1">
+          <option selected>Sort option:</option>
+          <option value="US">Sort by price ↑</option>
+          <option value="CA">Sort by price ↓</option>
+          <option value="UgS">Sort by rating ↑</option>
+          <option value="CA5">Sort by rating ↓</option>
+        </select>
+      </div>
+    </div>
+  <div class="flex gap-1 justify-between mb-2">
+    <div class="flex gap-1">
+      <button title="Clean filters" class="border rounded hover:border-gray-700 p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+        </svg>
+      </button>
+      <button title="Copy filters" class="border rounded hover:border-gray-700 p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round"
+              d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 01-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 011.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 00-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 01-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5a3.375 3.375 0 00-3.375-3.375H9.75"/>
+        </svg>
+      </button>
+    </div>
+    <div class="inline-block self-end">Found: <span id="total">100</span></div>
+    <div class="flex">
+  <span class="inline-flex items-center px-2 border border-gray-300 rounded-l">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+        <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"/>
       </svg>
-    </button>
-    <div
-        class="brandsScroll drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
-      <div id="slider"></div>
-      <div></div>
+  </span>
+      <input type="text" id="website-admin"
+          class="rounded-none rounded-r border focus:ring-gray-700 focus:border-gray-700 border-gray-300 px-2 py-1"
+          placeholder="Search">
     </div>
   </div>
-  <div class="">
-    <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded focus:ring-gray-800 focus:border-gray-800 block w-full pl-2 pr-7 py-1">
-      <option selected>Sort option:</option>
-      <option value="US">Sort by price ↑</option>
-      <option value="CA">Sort by price ↓</option>
-      <option value="UgS">Sort by rating ↑</option>
-      <option value="CA5">Sort by rating ↓</option>
-    </select>
-  </div>
+
 </aside>
 <section id="items"
     class="container xl:grid-cols-4 mx-auto grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5"></section>
