--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -84,7 +84,7 @@
             d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"/>
       </svg>
   </span>
-      <input type="text" id="website-admin"
+      <input type="text" id="search"
           class="rounded-none rounded-r border focus:ring-gray-700 focus:border-gray-700 border-gray-300 px-2 py-1"
           placeholder="Search">
     </div>
