--- a/src/templates/promocodeField.hbs
+++ b/src/templates/promocodeField.hbs
@@ -1,4 +1,4 @@
-<div class="promocodeBlock flex justify-between mb-[10px]">
+<div class="promocodeBlock flex justify-between mb-[10px]" data-discount="{{discountData}}">
   <p>Promo: <span class="promocodeName">{{promocodeName}}</span></p>
   <p class="text-red-600">-<span class="cartDiscount">{{discount}}</span>₽</p>
 </div>
