--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -24,9 +24,9 @@
             <img class="object-contain max-h-[100px]" src="{{this.images.[0]}}&fit=constrain" alt="">
             <div class="flex w-[80%] justify-between max-[1023px]:flex-wrap max-[1023px]:justify-around">
               <div class="w-[250px] max-[1023px]:w-full max-[1023px]:mb-[10px]">
-                <h3 class="jont-HelveticaNeueCyr font-[550] text-[16px] leading-snug text-center max-[768px]:text-[14px]">{{this.title}}</h3>
+                <h3 class="jont-HelveticaNeueCyr font-[550] text-[16px] leading-snug text-center max-[768px]:text-[15px]">{{this.title}}</h3>
               </div>
-              <div class="countContainer flex flex-col items-center w-[100px] max-[1023px]:flex-wrap max-[1023px]:w-unset">
+              <div class="countContainer flex flex-col items-center w-[100px] max-[1023px]:flex-wrap max-[1023px]:w-unset max-[768px]:text-[13px]">
                 <div>
                   <p>In stock: <span class="inStockCount">{{this.stock}}</span></p>
                 </div>
