--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -1,4 +1,4 @@
-<div class="container mx-auto mb-[10px] text-left flex font-Arial font-normal font-[16px] text-gray-300">
+<div class="container mx-auto mb-[10px] text-left flex font-Arial font-normal font-[16px] text-gray-300 max-[1023px]:text-[14px] max-[1023px]:items-center max-[1023px]:text-center">
   <span class="mr-3">Women</span>
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
@@ -13,49 +13,52 @@
   </svg>
   <span class="mr-3 text-black">{{object.title}}</span>
 </div>
-<div class="container mx-auto my-0 box-border flex justify-between">
-  <div class="w-[45%]">
-    <figure class="main-photo-container bg-center relative w-full h-max group" style="background-image: url('{{imageFirst}}&fit=constrain')">
-      <img class='main-photo w-full mb-4 group-hover:opacity-0' src="{{imageFirst}}&fit=constrain" alt="MainPhoto">
-    </figure>
-    <div class="carousel-photo flex justify-between">
-      {{#each object.images}}
-      <img class="small-photo w-[18%] cursor-pointer" alt="{{object.title}}" src="{{this}}&fit=constrain" data-index="{{@index}}">
-      {{/each}}
+<div class="container mx-auto my-0">
+  <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug text-center hidden max-[640px]:block max-[640px]:text-[24px]">{{object.title}}</h2>
+  <div class="container mx-auto my-0 box-border flex justify-between max-[640px]:flex-wrap">
+    <div class="w-[45%] max-[640px]:w-full">
+      <figure class="main-photo-container bg-center relative w-full h-max group" style="background-image: url('{{imageFirst}}&fit=constrain')">
+        <img class='main-photo w-full mb-4 group-hover:opacity-0' src="{{imageFirst}}&fit=constrain" alt="MainPhoto">
+      </figure>
+      <div class="carousel-photo flex justify-between">
+        {{#each object.images}}
+          <img class="small-photo w-[18%] cursor-pointer" alt="{{object.title}}" src="{{this}}&fit=constrain" data-index="{{@index}}">
+        {{/each}}
+      </div>
     </div>
-  </div>
-  <div class="w-[45%]">
-    <div class="flex items-center justify-between mb-[10px]">
-      <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">{{object.title}}</h2>
-      <p class="font-HelveticaNeueCyr font-normal text-[16px] text-gray-300">Article: <span>{{object.article}}</span></p>
-    </div>
-    <p class="font-HelveticaNeueCyr font-[550] text-[24px] leading-snug mb-[20px]">
-      <span>{{object.price}}</span>
-      ₽
-    </p>
-    <div class="mb-4">
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Category: {{object.category}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Brand: {{object.brand}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Stock: {{object.stock}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{date}}</p>
-    </div>
-    <div class="flex justify-between items-center mb-[60px]">
-      <button type="button" class="addToCartButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
-        Add to cart
-      </button>
-      <button type="button" class="quickBuyButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
-        Quick buy
-      </button>
-    </div>
-    <div class="drop-menu h-[68px] overflow-hidden border-t-[1px] border-b-[1px] border-gray-300">
-      <div class="cursor-pointer  pt-[20px] pb-[20px]">
-        <div class="flex justify-between items-center mb-[10px]">
-          <h3 class="font-HelveticaNeueCyr text-[20px] font-[550] leading-snug">Product description</h3>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-18 h-8 svg">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
-          </svg>
+    <div class="w-[45%] max-[640px]:w-full max-[640px]:text-center">
+      <div class="flex items-center justify-between mb-[10px]">
+        <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug max-[1023px]:text-[24px] max-[640px]:hidden">{{object.title}}</h2>
+      </div>
+      <p class="font-HelveticaNeueCyr font-[550] text-[24px] leading-snug mb-[20px]">
+        <span>{{object.price}}</span>
+        ₽
+      </p>
+      <div class="mb-4">
+        <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Article: {{object.article}}</p>
+        <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Category: {{object.category}}</p>
+        <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Brand: {{object.brand}}</p>
+        <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Stock: {{object.stock}}</p>
+        <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{date}}</p>
+      </div>
+      <div class="flex justify-between items-center mb-[60px]">
+        <button type="button" class="addToCartButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+          Add to cart
+        </button>
+        <button type="button" class="quickBuyButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+          Quick buy
+        </button>
+      </div>
+      <div class="drop-menu h-[68px] overflow-hidden border-t-[1px] border-b-[1px] border-gray-300">
+        <div class="cursor-pointer  pt-[20px] pb-[20px]">
+          <div class="flex justify-between items-center mb-[10px]">
+            <h3 class="font-HelveticaNeueCyr text-[20px] font-[550] leading-snug">Product description</h3>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-18 h-8 svg">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+            </svg>
+          </div>
+          <p>{{object.description}}</p>
         </div>
-        <p>{{object.description}}</p>
       </div>
     </div>
   </div>
