--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -21,10 +21,10 @@
       {{#each arrayOfArticles}}
         <div class="cartItem w-[95%] border-transparent mb-4 font-HelveticaNeueCyr max-[900px]:w-full" data-article="{{this.article}}" data-price="{{this.price}}">
           <div class="flex items-center justify-between p-[20px] max-[900px]:p-0">
-            <img class="object-contain max-h-[100px]" src="{{this.images.[0]}}&fit=constrain" alt="">
+            <img class="object-contain cursor-pointer max-h-[100px]" src="{{this.images.[0]}}&fit=constrain" alt="">
             <div class="flex w-[80%] justify-between max-[1023px]:flex-wrap max-[1023px]:justify-around">
               <div class="w-[250px] max-[1023px]:w-full max-[1023px]:mb-[10px]">
-                <h3 class="jont-HelveticaNeueCyr font-[550] text-[16px] leading-snug text-center max-[768px]:text-[15px]">{{this.title}}</h3>
+                <h3 class="jont-HelveticaNeueCyr cursor-pointer font-[550] text-[16px] leading-snug text-center max-[768px]:text-[15px]">{{this.title}}</h3>
               </div>
               <div class="countContainer flex flex-col items-center w-[100px] max-[1023px]:flex-wrap max-[1023px]:w-unset max-[768px]:text-[13px]">
                 <div>
