--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -42,10 +42,10 @@
         <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{date}}</p>
       </div>
       <div class="flex justify-between items-center mb-[60px]">
-        <button type="button" class="addToCartButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+        <button type="button" class="addToCartButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug hover:bg-white hover:text-black hover:transition hover:border-2">
           Add to cart
         </button>
-        <button type="button" class="quickBuyButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+        <button type="button" class="quickBuyButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug hover:bg-white hover:text-black hover:transition hover:border-2">
           Quick buy
         </button>
       </div>
